Fix expand/collapse button not showing up when hovering over edges.

--- a/src/styles/components/network-editor/index.css
+++ b/src/styles/components/network-editor/index.css
@@ -6,9 +6,9 @@ body {
 }
 
 .cluster_toggle_button {
-  border: none;
-  color: white;
-  padding: 4px;
+  border: 1px solid black;
+  color: black;
+  padding: 6px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -24,5 +24,5 @@ body {
 }
 
 .collapse {
-  background-color: #e3c011;
+  background-color: #ffff00;
 }
